Fix arrow - add z-index

--- a/src/components/FloatingHelper/FloatingHelper.st.css
+++ b/src/components/FloatingHelper/FloatingHelper.st.css
@@ -1,6 +1,7 @@
 :import {
-  -st-from: "wix-ui-core/index.st.css";
-  -st-named: Popover;
+  -st-from: "wix-ui-core/dist/src/components/Popover/Popover.st.css";
+  -st-default: Popover;
+  -st-named: withArrow, arrow;
 }
 
 :import {
@@ -25,12 +26,12 @@
 
 :import {
   -st-from: "../../colors.st.css";
-  -st-named: WHITE;
+  -st-named: D80;
 }
 
 :import {
   -st-from: "../../shadows.st.css";
-  -st-named: shadow40;
+  -st-named: shadow30;
 }
 
 :vars {
@@ -38,7 +39,7 @@
 
   /** background color D10 with opacity 0.95 */
   backgroundColorDark: rgba(22,45,61,0.95);
-  backgroundColorLight: WHITE;
+  backgroundColorLight: value(D80);
   closeButtonPadding: 6px;
 }
 
@@ -67,13 +68,17 @@
     );
 }
 
+.root::popover.withArrow .arrow {
+  z-index: 2;
+}
+
 /* popoverContent and innerContent are taken from Tooltip.tooltipContent,
  * but I split them.
 */
 .root::popoverContent {
   position: relative;
   box-sizing: border-box;
-  box-shadow: value(shadow40);
+  box-shadow: value(shadow30);
 }
 
 .closeButton {
